# Kakushi

./: Cargo.toml  Dockerfile  docker-compose.yml  justfile
.github/workflows/: docker-publish.yml
src/: cf_structs.rs  configs.rs  main.rs
