[package]
name = "kakushi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = [
    "rustls-tls",
    "json"
] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
pretty_env_logger = "0.4.0"
log = "0.4.17"
figment = { version = "0.10.6", features = ["env"] }
